--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-pdf"
-version = "1.1.1"
+version = "2.0.5"
 description = "Secure FastMCP server for comprehensive PDF processing - text extraction, OCR, table extraction, forms, annotations, and more"
 authors = [{name = "Ryan Malloy", email = "ryan@malloys.us"}]
 readme = "README.md"
@@ -36,7 +36,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "PyMuPDF>=1.23.0",
     "pdfplumber>=0.10.0",
-    "camelot-py[cv]>=0.11.0",
+    "camelot-py[cv]>=0.11.0",  # includes opencv-python
     "tabula-py>=2.8.0",
     "pytesseract>=0.3.10",
     "pdf2image>=1.16.0",
@@ -44,7 +44,6 @@ dependencies = [
     "pandas>=2.0.0",
     "Pillow>=10.0.0",
     "markdown>=3.5.0",
-    "opencv-python>=4.5.0",
 ]
 
 [project.urls]
@@ -56,8 +55,21 @@ Changelog = "https://github.com/rsp2k/mcp-pdf/releases"
 
 [project.scripts]
 mcp-pdf = "mcp_pdf.server:main"
+mcp-pdf-legacy = "mcp_pdf.server_legacy:main"
+mcp-pdf-modular = "mcp_pdf.server_refactored:main"
 
 [project.optional-dependencies]
+# Form creation features (create_form_pdf, advanced form tools)
+forms = [
+    "reportlab>=4.0.0",
+]
+
+# All optional features
+all = [
+    "reportlab>=4.0.0",
+]
+
+# Development dependencies
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
